--- a/index.html
+++ b/index.html
@@ -211,8 +211,10 @@
 
             <div class="section">
                 <h2>工作经历</h2>
-                <p><strong>2021.09-2022.02：</strong>中国科学技术大学，教学助理。课程：光学。教师：柳必恒教授。职责：组织习题和答疑课；批改作业和试卷；协助指导学生。</p>
-                <p><strong>2023.8-至今：</strong>合肥国家实验室，研究助理。职责：协助构建和测试高维量子系统。</p>
+                <p><strong>2021.09-2022.02：</strong>中国科学技术大学，教学助理。课程：光学。教师：柳必恒教授。<>
+		<p>职责：组织习题和答疑课；批改作业和试卷；协助指导学生。</p>
+                <p><strong>2023.8-2024.06：</strong>合肥国家实验室，研究助理。<\p>
+		<p>职责：协助构建和测试高维量子系统。</p>
             </div>
 
             <div class="section">
