--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+	    margin: 20px;
+	    line-height: 1.2; /* 调整全局行距 */
         }
         .container {
             max-width: 800px;
