--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
             <div class="section">
                 <h2>Research Publications</h2>
                 <ul>
-                    <li>1. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
-                    <li>2. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
-                    <li>3. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
-                    <li>4. H Zhang*, C Zhang*, XM Hu, BH Liu, YF Huang, CF Li, GC Guo. Arbitrary two-particle high-dimensional Bell-state measurement by auxiliary entanglement. Physical Review A 99 (5), 052301 (2019).</li>
-                    <li>5. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
-                    <li>6. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207. </li>
-                    <li>7. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
+		    <1i>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).<//1i>
+                    <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
+                    <li>3. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
+                    <li>4. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
+                    <li>5. H Zhang*, C Zhang*, XM Hu, BH Liu, YF Huang, CF Li, GC Guo. Arbitrary two-particle high-dimensional Bell-state measurement by auxiliary entanglement. Physical Review A 99 (5), 052301 (2019).</li>
+                    <li>6. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
+                    <li>7. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207. </li>
+                    <li>8. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
+		    <1i>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024) </1i>
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Preprints</h2>
-                <p>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. [under review]</p>
-                <p>2. C Zhang*, Y Li*, XM Hu*, Y Xiang, CF Li, GC Guo, J Tura, QY He, BH Liu. Randomness Certification with Multi-input and Multi-output in Nonlocality Scenario. [under review]</p>
-                <p>3. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. arXiv preprint arXiv:2307.15634. </p>
-                <p>4. LT Feng*, XM Hu*, M Zhang*, YJ Cheng, C Zhang, Y Guo, YY Ding, ZB Hou, FW Sun, GC Guo, DX Dai, A Tavakoli, XF Ren, BH Liu. Higher-dimensional symmetric informationally complete measurement via programmable photonic integrated optics. arXiv preprint arXiv: 2310.08838.</p>
+                <p>1. C Zhang*, Y Li*, XM Hu*, Y Xiang, CF Li, GC Guo, J Tura, QY He, BH Liu. Randomness Certification with Multi-input and Multi-output in Nonlocality Scenario. [under review]</p>
+                <p>2. LT Feng*, XM Hu*, M Zhang*, YJ Cheng, C Zhang, Y Guo, YY Ding, ZB Hou, FW Sun, GC Guo, DX Dai, A Tavakoli, XF Ren, BH Liu. Higher-dimensional symmetric informationally complete measurement via programmable photonic integrated optics. arXiv preprint arXiv: 2310.08838.</p>
             </div>
         </div>
 
@@ -241,22 +241,22 @@
             <div class="section">
                 <h2>Research Publications</h2>
                 <ul>
-                    <li>1. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
-                    <li>2. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
-                    <li>3. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
-                    <li>4. H Zhang*, C Zhang*, XM Hu, BH Liu, YF Huang, CF Li, GC Guo. Arbitrary two-particle high-dimensional Bell-state measurement by auxiliary entanglement. Physical Review A 99 (5), 052301 (2019).</li>
-                    <li>5. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
-                    <li>6. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207. </li>
-                    <li>7. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
+		    <1i>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).<//1i>
+                    <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
+                    <li>3. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
+                    <li>4. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
+                    <li>5. H Zhang*, C Zhang*, XM Hu, BH Liu, YF Huang, CF Li, GC Guo. Arbitrary two-particle high-dimensional Bell-state measurement by auxiliary entanglement. Physical Review A 99 (5), 052301 (2019).</li>
+                    <li>6. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
+                    <li>7. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207. </li>
+                    <li>8. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
+		    <1i>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024) </1i>
                 </ul>
             </div>
 
             <div class="section">
                 <h2>Preprints</h2>
-                <p>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. [under review]</p>
-                <p>2. C Zhang*, Y Li*, XM Hu*, Y Xiang, CF Li, GC Guo, J Tura, QY He, BH Liu. Randomness Certification with Multi-input and Multi-output in Nonlocality Scenario. [under review]</p>
-                <p>3. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. arXiv preprint arXiv:2307.15634. </p>
-                <p>4. LT Feng*, XM Hu*, M Zhang*, YJ Cheng, C Zhang, Y Guo, YY Ding, ZB Hou, FW Sun, GC Guo, DX Dai, A Tavakoli, XF Ren, BH Liu. Higher-dimensional symmetric informationally complete measurement via programmable photonic integrated optics. arXiv preprint arXiv: 2310.08838.</p>
+                <p>1. C Zhang*, Y Li*, XM Hu*, Y Xiang, CF Li, GC Guo, J Tura, QY He, BH Liu. Randomness Certification with Multi-input and Multi-output in Nonlocality Scenario. [under review]</p>
+                <p>2. LT Feng*, XM Hu*, M Zhang*, YJ Cheng, C Zhang, Y Guo, YY Ding, ZB Hou, FW Sun, GC Guo, DX Dai, A Tavakoli, XF Ren, BH Liu. Higher-dimensional symmetric informationally complete measurement via programmable photonic integrated optics. arXiv preprint arXiv: 2310.08838.</p>
             </div>
         </div>
     </div>
