--- a/index.html
+++ b/index.html
@@ -55,16 +55,7 @@
                 <h2>Education</h2>
                 <p><strong>2015.09-2019.06:</strong> University of Science and Technology of China, School of Physics, Photoelectric Information Science (Bachelor), Computer Science and Technology (Minor)</p>
                 <p><strong>2019.09-2024.06:</strong> University of Science and Technology of China, School of Physics, Physics (Quantum Optics) (PhD)</p>
-            </div>
-
-            <div class="section">
-                <h2>Self-appraise</h2>
-                <ul>
-                    <li>A stable personality and high sense of responsibility are desirable.</li>
-                    <li>Good academic foundation, the ability to analyze problems independently and propose solutions, willing to challenge difficulties and strong ability to resist setbacks.</li>
-                    <li>Have good research and summary skills for new technologies.</li>
-                    <li>Good communication and collaboration skills, enthusiastic to help group members solve problems.</li>
-                </ul>
+		<p><strong>2024.10-now：</strong> Technical University of Denmark，Physics（Postdoc）</p>
             </div>
 
             <div class="section">
@@ -167,21 +158,12 @@
             <div class="section">
                 <h2>教育经历</h2>
                 <p><strong>2015.09-2019.06：</strong>中国科学技术大学，物理学院，光电信息科学（本科），计算机科学与技术（辅修）</p>
-                <p><strong>2019.09-至今：</strong>中国科学技术大学，物理学院，物理（量子光学）（博士）</p>
+                <p><strong>2019.09-2024.06：</strong>中国科学技术大学，物理学院，物理（量子光学）（博士）</p>
+		<p><strong>2024.10-now：</strong>丹麦科技大学，物理学院（博后）</p>
             </div>
 
             <div class="section">
-                <h2>自我评价</h2>
-                <ul>
-                    <li>具有稳定的性格和高度的责任感。</li>
-                    <li>扎实的学术基础，能够独立分析问题并提出解决方案，愿意挑战困难，抗挫能力强。</li>
-                    <li>具备良好的新技术研究和总结能力。</li>
-                    <li>良好的沟通和协作能力，热心帮助组员解决问题。</li>
-                </ul>
-            </div>
-
-            <div class="section">
-                <h2>专业知识摘要</h2>
+                <h2>实验研究</h2>
                 <ul>
                     <li>量子非局域性，包括量子贝尔非局域性、量子引导和量子纠缠，是颠覆局域实在论的重要现象，也是实现量子技术如随机数生成、量子密钥分发、量子传态等的重要资源。</li>
                     <li>设计并构建高维高效纠缠源，并使用Eberhard不等式在无检测漏洞的情况下测试四维贝尔非局域性。随后，我们在多测量和多输出的高维系统中探讨贝尔非局域性与内在随机性的关系。</li>
