--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <div class="section">
                 <h2>Research Publications</h2>
                 <ul>
+		    <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
 		    <1i>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).</1i>
                     <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
                     <li>3. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
