--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
             <div class="section">
                 <h2>Research Publications</h2>
                 <ul>
-		    <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
-		    <1i>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).</1i>
+		    <li>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024)..</li>
                     <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
                     <li>3. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
                     <li>4. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
@@ -137,7 +136,7 @@
                     <li>6. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
                     <li>7. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207. </li>
                     <li>8. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
-		    <1i>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024) </1i>
+		    <li>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024) </li>
                 </ul>
             </div>
 
@@ -232,7 +231,7 @@
             <div class="section">
                 <h2>Research Publications</h2>
                 <ul>
-		    <1i>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).</1i>
+		    <li>1. C Zhang*, XM Hu*, F Ding, XY Hu, Y Guo, BH Liu, YF Huang, CF Li, GC Guo. Experimental Catalytic Amplification of Asymmetry. Physical Review Letters 133, 140201 (2024).</li>
                     <li>2. XM Hu*, C Zhang*, BH Liu, Y Guo, WB Xing, CX Huang, YF Huang, CF Li, GC Guo. High-Dimensional Bell Test without Detection Loophole. Physical Review Letters 129 (6), 060402 (2022).</li>
                     <li>3. R Qu*, C Zhang*, ZH Chang, Y Guo, XM Hu, CF Li, GC Guo, P Zhang, BH Liu. Observation of Diverse Asymmetric Structures in High-Dimensional Einstein-Podolsky-Rosen Steering. Physical Review Letters 132 (21), 210202 (2024).</li>
                     <li>4. XM Hu, C Zhang, Y Guo, FX Wang, WB Xing, CX Huang, BH Liu, YF Huang, GC Guo, XQ Gao, M Pivoluska, M Huber. Pathways for entanglement-based quantum communication in the face of high noise. Physical Review Letters 127 (11), 110505 (2021).</li>
@@ -240,7 +239,7 @@
                     <li>6. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1), 010503.</li>
                     <li>7. S Ru, CX Huang, XM Hu, C Zhang, F Wang, N Liu, WD Tang, P Zhang, BH Liu, FL Li. Experimental implementation of Hardy-like quantum pigeonhole paradoxes. Physical Review A 107 (2), 022207.</li>
                     <li>8. XM Hu, CX Huang, YB Sheng, L Zhou, BH Liu, Y Guo,C Zhang, WB Xing, YF Huang, CF Li, GC Guo. Long-distance entanglement purification for quantum communication. Physical Review Letters 126 (1),010503.</li>
-		    <1i>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024).</1i>
+		    <li>9. X Liu*, XM Hu*, TX Zhu*, C Zhang, YX Xiao, JL Miao, ZW Ou, BH Liu, ZQ Zhou, CF Li, GC Guo. Nonlocal quantum gates over 7.0 km. Nature Communications 15 (1), 8529 (2024).</li>
                 </ul>
             </div>
 
